--- a/07/index.html
+++ b/07/index.html
@@ -85,7 +85,7 @@ Nevertheless, the code worked well but I realized that the sensor values were no
 
 <div class = "center">
   <img src="../07/calibration.png" 
-     width ="400" height="500"/>
+     width ="700" height="500"/>
 </div>
 
 <u>Using the TFT display</u>
@@ -116,7 +116,7 @@ I was slightly confused how to use the oscilloscope at first, however, once Ibra
 
 When I switched to the pump measurements, I found that there was way less fluctuation. The values I got are shown below but I interpreted this roughly as a Vmax of 5V and a period of 2ms. 
 
-<video width ="300" height="500" autoplay loop muted>
+<video width ="500" height="300" autoplay loop muted>
   <source src="../07/pump.mp4" type="video/mp4"  />
 </video>
 
@@ -286,13 +286,13 @@ For the milling and casting project next week I decided to take a break with my 
 Here are my original CAD drawings:
 
 <div class = "center">
-  <img src="../07/calibration.png" 
+  <img src="../07/panda.png" 
      width ="400" height="500"/>
 </div>
 
-I then followed (this)[https://www.youtube.com/watch?v=vKZx9eHEL6o] tutorial which explained how to create a mold out of this. I tried 2.5D in Fusion 360 as well but all the new features confused me so I thought I would keep it simple for my first test run. The tutorial was straightforward. I had some weird issues arise with cutting the component in my block so that it would produce an indent shape but I think it was reading the component weirdly. This was ultimately resolve by moving my panda component back to a separate body, although I’m not too sure why that worked. 
+I then followed [this](https://www.youtube.com/watch?v=vKZx9eHEL6o) tutorial which explained how to create a mold out of this. I tried 2.5D in Fusion 360 as well but all the new features confused me so I thought I would keep it simple for my first test run. The tutorial was straightforward. I had some weird issues arise with cutting the component in my block so that it would produce an indent shape but I think it was reading the component weirdly. This was ultimately resolve by moving my panda component back to a separate body, although I’m not too sure why that worked. 
 
-After talking to Kassia she told me it may be hard to mill circular shapes (i.e. the legs and arms) at an angle as shown above so I tried to make them more perpendicular to the main body. Hopefully this version works a little better.
+After talking to Kassia she told me it may be hard to mill circular shapes (i.e. the legs and arms) at an angle as shown above so I tried to make them more perpendicular to the main body. Hopefully this version works a little better (saved as an STL).
 
 
 
